--- a/Garage3.0/Garage3.0.Web/Garage3.0.Web.csproj
+++ b/Garage3.0/Garage3.0.Web/Garage3.0.Web.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <Folder Include="Models\Entities\" />
     <Folder Include="Models\ViewModels\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
