--- a/Garage3.0/Garage3.0.Web/Garage3.0.Web.csproj
+++ b/Garage3.0/Garage3.0.Web/Garage3.0.Web.csproj
@@ -23,4 +23,8 @@
     <PackageReference Include="Personnummer" Version="3.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
