--- a/Garage3.0/Garage3.0.Web/appsettings.json
+++ b/Garage3.0/Garage3.0.Web/appsettings.json
@@ -9,5 +9,8 @@
   "ConnectionStrings": {
     "GarageContext": "Server=(localdb)\\mssqllocaldb;Database=Garage_3_0Context;Trusted_Connection=True;MultipleActiveResultSets=true",
     "Garage3_0WebContext": "Server=(localdb)\\mssqllocaldb;Database=Garage3_0WebContext-c72ff2ab-3315-4b05-a336-8bad228007df;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "Garage": {
+    "HourlyCarge": "15"
   }
 }
